--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "next": "10.0.9",
     "react": "17.0.2",
+    "react-countdown": "^2.3.1",
     "react-dom": "17.0.2"
   }
 }
